--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  
   <link href="style.css" rel="stylesheet">
-  <script defer src="quiz.js"></script>
-  <title>Quick Quiz</title>
+  
+   <title>Quick Quiz</title>
 </head>
+
 <body>
- 
+
   <div class="container">
-    <div id="landing"> 
+    <div id="landing">
       <h1>Timed javaScript Quiz</h1>
       <p>Begin by clicking the 'Start Clock' button.</p>
-      <p>Begin with 60seconds/point.</p>
+      <p>Begin with 60seconds/points.</p>
       <p>10point penalty per 'Wrong' answer!</p>
     </div>
+
     <h2 id="timer" class="hide">TICK! TOCK!</h2>
+
     <div id="question-container" class="hide">
       <div id="question">Question</div>
       <div id="answer-buttons" class="btn-grid">
@@ -27,10 +32,23 @@
         <button class="btn">Answer 4</button>
       </div>
     </div>
+
     <div class="controls">
       <button id="start-btn" class="start-btn btn">Start Clock!</button>
       <button id="next-btn" class="next-btn btn hide">Next</button>
+      <button id="end-btn" class="end-btn btn hide">Stop the Clock!</button>
+    </div>
+
+    <div id="scores" class="hide">
+      <form id="score-form" method="POST" input type="submit">
+        <label for="score-text">Add a score:</label>
+        <input type="text" placeholder="Your Name Here..." name="score-text" id="score-text" />
+      </form>
+      <p>score Count: <span id="score-count">0</span></p>
+      <ul id="score-list"></ul>
     </div>
   </div>
+  <script src="quiz.js"></script>
 </body>
+
 </html>
